--- a/templates/edit_article.html.twig
+++ b/templates/edit_article.html.twig
@@ -3,13 +3,23 @@
 {% block title %}Main page{% endblock %}
 
 {% block body %}
+    <h1>Редактирование страницы: <a href="/{{ article.name }}">{{ article.name }}</a></h1>
     <form method="POST" action="/{{ article.name }}/edit-submit">
         <input type="hidden" name="id" value="{{ article.id }}">
-        <input type="text" name="name" value="{{ article.name }}"><br>
-        <input type="text" name="title" value="{{ article.title }}"><br>
-        <textarea name="text" id="article-text" cols="30" rows="10">
-            {{ article.text }}
-        </textarea><br>
-        <input type="submit"><br>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Имя страницы</label>
+            <input class="form-control" name="name" placeholder="Название" value="{{ article.name }}">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Заголовок страницы</label>
+            <input name="title" class="form-control" placeholder="Заголовок" value="{{ article.title }}">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Содержимое страницы</label>
+            <textarea name="text" class="form-control" rows="5">
+                {{ article.text }}
+            </textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 {% endblock %}
