--- a/templates/article_index.html.twig
+++ b/templates/article_index.html.twig
@@ -8,6 +8,6 @@
     <h1>{{ article.title }}</h1>
     <a href="/">На главную</a>
     <p>
-        {{ article.text }}
+        {{ article.text|raw }}
     </p>
 {% endblock %}
