--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
         <div class="row">
             <div class="col-lg-2 col-md-2"></div>
             <div class="col-lg-8 col-md-8">
+                <h1 align="center">Администраторская панель</h1>
                 {% for message in app.flashes('warning') %}
                     <div class="alert alert-danger" role="alert">
                         {{ message }}
