--- a/templates/edit_article.html.twig
+++ b/templates/edit_article.html.twig
@@ -16,9 +16,7 @@
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Содержимое страницы</label>
-            <textarea id="text" name="text" class="form-control" rows="5">
-                {{ article.text }}
-            </textarea>
+            <textarea id="text" name="text" class="form-control" rows="5">{{ article.text }}</textarea>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
