--- a/templates/add_article.html.twig
+++ b/templates/add_article.html.twig
@@ -15,8 +15,7 @@
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Содержимое страницы</label>
-            <textarea id="text" name="text" class="form-control" rows="5">
-            </textarea>
+            <textarea id="text" name="text" class="form-control" rows="5"></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
