--- a/app/templates/edit_article.html.twig
+++ b/app/templates/edit_article.html.twig
@@ -7,15 +7,11 @@
     <form id="edit-article" method="POST" action="/{{ article.name }}/edit-submit">
         <input type="hidden" name="id" value="{{ article.id }}">
         <div class="form-group">
-            <label for="exampleInputEmail1">Имя страницы</label>
-            <input id="name" class="form-control" name="name" placeholder="Название" value="{{ article.name }}">
-        </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Заголовок страницы</label>
+            <label>Заголовок страницы</label>
             <input id="title" name="title" class="form-control" placeholder="Заголовок" value="{{ article.title }}">
         </div>
         <div class="form-group">
-            <label for="exampleInputPassword1">Содержимое страницы</label>
+            <label>Содержимое страницы</label>
             <textarea id="text" name="text" class="form-control" rows="5">{{ article.text }}</textarea>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
